// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly: default 1`] = `
<Modal
  contentLabel="hotspots.congratulations"
>
  <div
    className="modal-head big text-center text-bold"
  >
    <p>
      hotspots.successful_status_change_to_x.hotspots.status_option.FIXED
    </p>
  </div>
  <div
    className="modal-body text-center"
  >
    <FormattedMessage
      defaultMessage="hotspots.find_in_status_filter_x"
      id="hotspots.successfully_changed_to_x"
      values={
        {
          "status_label": <strong>
            hotspots.status_option.FIXED
          </strong>,
        }
      }
    />
    <p
      className="spacer-top"
    >
      <FormattedMessage
        defaultMessage="hotspots.x_done_keep_going"
        id="hotspots.x_done_keep_going"
        values={
          {
            "percentage": <strong>
              
            </strong>,
          }
        }
      />
    </p>
  </div>
  <div
    className="modal-foot modal-foot-clear display-flex-center display-flex-space-between"
  >
    <ButtonLink
      onClick={[MockFunction]}
    >
      hotspots.see_x_hotspots.hotspots.status_option.FIXED
    </ButtonLink>
    <Button
      className="button padded"
      onClick={[MockFunction]}
    >
      hotspots.continue_to_next_hotspot
    </Button>
  </div>
</Modal>
`;

exports[`should render correctly: opening hotspots again 1`] = `
<Modal
  contentLabel="hotspots.update.success"
>
  <div
    className="modal-head big text-center text-bold"
  >
    <p>
      hotspots.successful_status_change_to_x.hotspots.status_option.TO_REVIEW
    </p>
  </div>
  <div
    className="modal-body text-center"
  >
    <FormattedMessage
      defaultMessage="hotspots.find_in_status_filter_x"
      id="hotspots.successfully_changed_to_x"
      values={
        {
          "status_label": <strong>
            hotspots.status_option.TO_REVIEW
          </strong>,
        }
      }
    />
  </div>
  <div
    className="modal-foot modal-foot-clear display-flex-center display-flex-space-between"
  >
    <ButtonLink
      onClick={[MockFunction]}
    >
      hotspots.see_x_hotspots.hotspots.status_option.TO_REVIEW
    </ButtonLink>
    <Button
      className="button padded"
      onClick={[MockFunction]}
    >
      hotspots.continue_to_next_hotspot
    </Button>
  </div>
</Modal>
`;
